The app no longer shifts to the left once the scrollbar appears. Cleaned/neatened up more code in the style sheet

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 100vh;
+    width: 100vw; /* Notice how this is 'vw' and not 'vh'. */
+    height: auto;
     margin: 0;
     padding: 0;
     background-image: url(./images/backgroundImage80opacity.png);
@@ -40,13 +41,13 @@ h1 {
 #questionText {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 30px;
     font-weight: bold;
     word-wrap: break-word;
-    font-size: 30px;
+    overflow: hidden;
     height: auto;
     margin-left: 10px;
     margin-right: 10px;
@@ -55,10 +56,10 @@ h1 {
 #quizContainer {
     margin-top: -10px;
     margin-bottom: 1em;
+    height: auto;
     width: 100%;
     background-color: rgb(234, 216, 251);
-    height: auto;
-    border: 0.1px solid black;
+    border: 1px solid black;
 }
 
 #choicesContainer {
@@ -68,7 +69,7 @@ h1 {
     justify-content: center;
     justify-items: center;
     align-items: start;
-    max-height: 10em;
+    max-height: 9.97em;
     min-width: 100%;
     max-width: 100%;
 }
@@ -78,10 +79,11 @@ h1 {
     justify-content: center;
     justify-items: center;
     height: 80px;
-    width: 100.5%;
+    min-width: 100.5%;
+    max-width: 100.5%;
     font-weight: bold;
     font-size: 20px;
-    border: 0.1px black solid;
+    border: 1px solid black;
 }
 
 #submit, #nextQuestionButton, #startOverButton, .choiceButtons {
@@ -111,7 +113,7 @@ h1 {
     display: flex;
     height: auto;
     width: 100%;
-    border: 0.1px solid black;
+    border: 1px solid black;
     background-color: rgb(185, 238, 255);
 }
 
@@ -130,11 +132,11 @@ h1 {
     flex-direction: column;
     justify-content: center;
     margin-top: 12%;
-    width: 36em;
     height: 19.5em;
-    border-radius: 5%;
+    width: 36em;
     color: aquamarine;
-    border: 0.1px solid black;
+    border: 1px solid black;
+    border-radius: 5%;
     background-color: rgba(242, 233, 233, 0.65);
     text-shadow: 
     -1px -1px 0 #000,  
@@ -162,7 +164,6 @@ h1 {
 .selection {
     background-color: rgb(190, 181, 181);
     color: black;
-    border: 1px black solid;
 }
 
 .disabled {
